Updates the RabbitMQ input transport to allow unnamed queues, which will automatically created a transient, exclusive, and auto-delete queue. This commit also supports exchange types other than direct and fanout, including custom plugin exchanges.

--- a/rabbitmq-transport/src/main/resources/com/esri/geoevent/transport/rabbitmq-transport.properties
+++ b/rabbitmq-transport/src/main/resources/com/esri/geoevent/transport/rabbitmq-transport.properties
@@ -18,6 +18,8 @@ TRANSPORT_EXCHANGE_NAME_LBL=Exchange Name
 TRANSPORT_EXCHANGE_NAME_DESC=Exchange Name
 TRANSPORT_EXCHANGE_TYPE_LBL=Exchange Type
 TRANSPORT_EXCHANGE_TYPE_DESC=Exchange Type
+TRANSPORT_EXCHANGE_OTHER_TYPE_LBL=Other Exchange Type
+TRANSPORT_EXCHANGE_OTHER_TYPE_DESC=Exchange type if it is not direct or fanout. 
 TRANSPORT_EXCHANGE_DURABILITY_LBL=Exchange Durability
 TRANSPORT_EXCHANGE_DURABILITY_DESC=Durable exchanges survive broker restart whereas transient exchanges do not.
 TRANSPORT_EXCHANGE_AUTO_DELETE_LBL= Exchange Auto-delete
@@ -25,7 +27,7 @@ TRANSPORT_EXCHANGE_AUTO_DELETE_DESC=If 'true', the exchange will delete itself a
 
 # Queue
 TRANSPORT_IN_QUEUE_NAME_LBL=Queue Name
-TRANSPORT_IN_QUEUE_NAME_DESC=Queue Name
+TRANSPORT_IN_QUEUE_NAME_DESC=Queue Name. If no queue name is specified, a transient exclusive auto-delete queue with a broker-generated random name will be used instead.
 TRANSPORT_IN_QUEUE_DURABILITY_LBL=Queue Durability
 TRANSPORT_IN_QUEUE_DURABILITY_DESC=Durable queues survive broker restart whereas transient queues do not.
 TRANSPORT_IN_QUEUE_EXCLUSIVE_LBL=Exclusive Queue
@@ -35,7 +37,7 @@ TRANSPORT_IN_QUEUE_AUTO_DELETE_DESC=If 'true', the queue will delete itself afte
 
 # Inbound Transport Definition
 TRANSPORT_IN_LABEL=RabbitMQ Inbound Transport
-TRANSPORT_IN_DESC=JMS Inbound Transport for connecting to RabbitMQ message servers.
+TRANSPORT_IN_DESC=Inbound Transport for connecting to RabbitMQ message servers.
 TRANSPORT_IN_QOS_LBL=Quality of Service
 TRANSPORT_IN_QOS_DESC=Tell RabbitMQ how many unacknowledged messages each worker can handle at a time.
 TRANSPORT_IN_ROUTING_KEY_LBL=Routing Key
@@ -44,7 +46,7 @@ TRANSPORT_IN_INIT_ERROR=Failed to define properties of RabbitMQ inbound transpor
 
 # Outbound Transport Definition
 TRANSPORT_OUT_LABEL=RabbitMQ Outbound Transport
-TRANSPORT_OUT_DESC=JMS Outbound Transport for connecting to RabbitMQ message servers.
+TRANSPORT_OUT_DESC=Outbound Transport for connecting to RabbitMQ message servers.
 TRANSPORT_OUT_INIT_ERROR=Failed to define properties of RabbitMQ outbound transport. Error: {0}.
 TRANSPORT_OUT_NO_MESSAGE_TO_SEND_ERROR=No message to send.
 TRANSPORT_OUT_FAILED_TO_SEND_MESSAGE_ERROR=Outbound transport failed to send a message.
@@ -73,8 +75,7 @@ CHANNEL_CREATE_ERROR=Failed to create new channel. Error: {0}.
 CHANNEL_INIT_ERROR=Failed to initialize a channel. Error: {0}.
 CHANNEL_CLOSE_ERROR=Failed to close channel while disconnecting from RabbitMQ. Error: {0}.
 EXCHANGE_CREATE_ERROR=Failed to declare RabbitMQ exchange. Error: {0}.
-EXCHANGE_VALIDATE_ERROR=Failed to validate RabbitMQ exchange. Exchange name is invalid.
-QUEUE_NAME_VALIDATE_ERROR=Failed to validate RabbitMQ queue. Queue name is invalid.
+EXCHANGE_VALIDATE_ERROR=Failed to validate RabbitMQ exchange. Both an exchange name and a type must be specified.
 CONSUMER_INIT_ERROR=Failed to initialize message consumer. Error: {0}.
 CONSUMER_CANCEL_ERROR=Failed to stop message consumer. Error: {0}.
 CONSUMER_RECOVERY_STARTED=Consumer from channel({0}) started recovering.
